Automate Firebase venv setup and harden AI retries

--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,9 @@
         "env",
         "venv",
         ".venv"
+      ],
+      "predeploy": [
+        "python -m functions.devtools.ensure_venv"
       ]
     }
   ]
